# sondage_public_elysee

./: .env  .gitignore  Cargo.toml  DEPLOYMENT.md  README.md  SECURITY.md  setup_db.py  test_api.py  voting-backend.service  voting.db
migrations/: 20240101000000_initial_setup.sql
src/: db.rs  main.rs  models.rs  routes.rs  security.rs
